--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.4.0",
     "framer-motion": "^10.16.0",
     "lodash.debounce": "^4.0.8",
-    "next": "13.4.13",
+    "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
